--- a/Tutorial Overfit and underfit.ipynb
+++ b/Tutorial Overfit and underfit.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3815b5ab",
+   "id": "4c14faba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "from tensorflow.keras.layers import InputLayer, Input, Dense\n",
     "from tensorflow.keras.optimizers import Adam, SGD\n",
     "from tensorflow.keras.losses import SparseCategoricalCrossentropy, BinaryCrossentropy\n",
-    "from tensorflow.keras.utils import plot_model\\\n",
+    "from tensorflow.keras.utils import plot_model\n",
     "# from tensorflow.keras.regularizers import Regularizer\n",
     "import pandas as pd\n",
     "import numpy as np"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4cf0e620",
+   "id": "53b67cff",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2c06e564",
+   "id": "e2f9c98e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7c5c3e08",
+   "id": "c9deb477",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a8b500ca",
+   "id": "6c4dfa97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "caf54d58",
+   "id": "3505e018",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c1002580",
+   "id": "cc00c1cf",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "40370f47",
+   "id": "b19aef94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,8 +117,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "7fc8b76c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-06-26 09:58:08.623641: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2022-06-26 09:58:08.624163: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds = tf.data.experimental.CsvDataset(gz, [float(),]*(FEATURES+1), compression_type='GZIP')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "64dd1c72",
+   "id": "9989f011",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -126,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27ecddf5",
+   "id": "e4fdc599",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -134,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae003a37",
+   "id": "2dc597b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -142,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f9098ac",
+   "id": "e9c04c82",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -150,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae79104d",
+   "id": "64b6229b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -158,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c639d0af",
+   "id": "c8d404dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -166,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f8e2b20",
+   "id": "b1a75762",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -174,15 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9c136ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc028eae",
+   "id": "05ea0a41",
    "metadata": {},
    "outputs": [],
    "source": []
