--- a/tutorial Save and load models.ipynb
+++ b/tutorial Save and load models.ipynb
@@ -39,16 +39,30 @@
     "import os\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
+    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "from tensorflow.keras.models import Sequential, Model\n",
     "\n",
     "print(tf.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "11029270",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m (train_images, train_labels), (test_images, test_labels) \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mdatasets\u001b[38;5;241m.\u001b[39mmnist\u001b[38;5;241m.\u001b[39mload_data()\n\u001b[1;32m      3\u001b[0m train_labels \u001b[38;5;241m=\u001b[39m train_labels[:\u001b[38;5;241m1000\u001b[39m]\n\u001b[1;32m      4\u001b[0m test_labels \u001b[38;5;241m=\u001b[39m test_labels[:\u001b[38;5;241m1000\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     ]
+    }
+   ],
    "source": [
     "(train_images, train_labels), (test_images, test_labels) = tf.keras.datasets.mnist.load_data()\n",
     "\n",
